--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
-<?php
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <title>Almagine - Geração de Imagens IA</title>
@@ -12,16 +12,20 @@
             margin: 2rem auto 1.5rem auto;
             text-align: center;
         }
-        .headline, .subtitle, .about {
+
+        .headline,
+        .subtitle,
+        .about {
             text-align: center;
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <div class="logo">
             <svg class="logo-star" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <polygon points="18,3 22,14 34,14 24,21 28,33 18,26 8,33 12,21 2,14 14,14" fill="#fff"/>
+                <polygon points="18,3 22,14 34,14 24,21 28,33 18,26 8,33 12,21 2,14 14,14" fill="#fff" />
             </svg>
             Almagine
         </div>
@@ -47,4 +51,5 @@
         </div>
     </div>
 </body>
+
 </html>
