--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
             Crie imagens profissionais para suas redes sociais, projetos e campanhas usando IA.<br>
             Simples, rápido e gratuito.
         </div>
-        <a href="deepseek_form.php" class="cta-btn">Comece a Criar Agora</a>
+        <a href="generator.php" class="cta-btn">Comece a Criar Agora</a>
         <div class="about">
             <b>Sobre o sistema:</b><br>
             Este projeto permite gerar imagens automaticamente por IA a partir de descrições textuais.<br>
